# Offline-Edu

./: .replit  LICENSE  README.md  package-lock.json  pyproject.toml
backend/: main.py  requirements.txt
studentSide/: App.js  app.json  package-lock.json  package.json
studentSide/android/: settings.gradle
studentSide/android/app/: BUCK  build.gradle
studentSide/ios/: Podfile
studentSide/ios/studentSide/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
studentSide/ios/studentSide.xcodeproj/: project.pbxproj
studentSide/ios/studentSideTests/: studentSideTests.m
studentSide/src/ConvertedImage/: index.js  styles.js
studentSide/src/LandingPage/: LandingPage.js  styles.js
teacherSide/: .gitignore  App.js  app.json  package.json
teacherSide/android/: settings.gradle
teacherSide/android/app/: BUCK  build.gradle
teacherSide/ios/: Podfile
teacherSide/ios/teacherSide/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
teacherSide/ios/teacherSide.xcodeproj/: project.pbxproj
teacherSide/ios/teacherSideTests/: teacherSideTests.m
teacherSide/src/: Store.js
teacherSide/src/assests/: teaching.json
teacherSide/src/navigation/: StackNav.js
teacherSide/src/screens/AuthLanding/: Landing.js  LandingStyles.js
teacherSide/src/screens/Classroom/: Classroom.js  CreateClass.js
teacherSide/src/screens/ImagePicker/: ImagePicker.js
teacherSide/src/screens/LandingScreen/: Landing.js  LandingStyles.js
teacherSide/src/screens/Login/: Login.js  LoginStyle.js
teacherSide/src/screens/SendSMS/: SendScreen.js
teacherSide/src/screens/SignUp/: SignUp.js  (+1 more)
(+14 files in other folders)
