[tool.poetry]
name = "repl_python3_Offline-Edu"
version = "0.1.0"
description = ""
authors = ["BreendaDas <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.2"
Werkzeug = "^2.0.1"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
ibm-cloud-sdk-core = "^3.10.1"
ibm-watson = "^5.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
